- First Alpha! yay

Build 10

- Added Thaumcraft and TConstruct Pickaxe compatibility
- Fixed weird issue with brewing stands and cauldrons showing as fire in NEI recipes. Minecraft code is weird, I swear, blocks and items are different for these 2
- Registered Locked Recipes in Recipe Sorter. Derp

Build 11

- Fixed(tm) tinkers construct pickaxe recognition
- Rewrote command to autocomplete. Split into multiple commands. Allow forcetoggling abilities by creative players 

Build 12

- Shift clicking items in guis. yay [BETA]
- Rewrote grappling hook

Build 13

- Grappling hook shoots farther
- Fixed Grappling hook being able to be used by everyone
- Partially rewrote target selection for evocations. It should fix entities stop targeting you if you nametagged them a special string
- Fixed Skeletons and zombies always dropping souls
- Fixed Tinkers Construct compatibility. For real this time
- keepInventory, doMobLoot and doTileDrops gamerules are now respected 
- Placing of blocks with floor layer and scaffold builder now checks if the block is replaceable or air
- Fixed Enchanter and disenchanter not dropping contents when destroyed
- Fixed Expert Eye Bug
- Added WARNs in console about sensitive configs being modified
- Added Check about Botania's Ring of Far Reach when enabling long hands
- Compressed Information in Perks Gui with shift-hover
- Extra inventories now have a tooltip that tells what ability the inventory is from
- Implemented IMC messages to exclude items from ticking and pickaxe compatibility
- Fixed server hanging bug

Build 14

- Fixed evocations revolting against the owner when the entity is unloaded and reloaded
- Removed redundancy in condition checking, one time is enough to check where code is executed, isn't it? 
- Fixed derp from debugging code
- Fixed redstone not being able to be joined-mined because of metadata shifting for light
- Fixed Designer not working with wood, making buttons instead. Recipe sorter to the rescue