@@ -122,7 +122,7 @@ perk.explorer.6=Viaggiatore Esperto
 
 perk.desc.explorer.1=Ti permette di dormire in ogni condizione_eccetto la luce diurna
 perk.desc.explorer.2=Hai un po piu' di spazio per tenere_la tua roba mentre viaggi
-perk.desc.explorer.3=Sembra sempre che tu trovi qualcosa mentre viaggi._Devi essere almeno a 64 blocchi dal tuo letto,_e intorno a te compaiono tesori
+perk.desc.explorer.3=Sembra sempre che tu trovi qualcosa mentre viaggi._Devi essere almeno a 256 blocchi dal tuo letto,_e intorno a te compaiono tesori
 perk.desc.explorer.4=Salti piu' alto e corri piu' veloce_Non devi piu' saltare sui gradini piu' alti
 perk.desc.explorer.5=Se cadi da molto in alto la tua agilita'_ti permette sempre di sopravvivere
 perk.desc.explorer.6=Il tuo stomaco si riempie a costo di esperienza
